[tool.poetry]
name = "task-assignment-load-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
locustio = "^0.14.4"
matplotlib = "^3.1.3"
pyjwt = {extras = ["crypto"], version = "^1.7.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
